--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <h1 class="header__title">
           Научиться учиться
       </h1>
-      <p class="header__subtitle">Какие современные и эффективные подходы к обучению вы можете использовать в своей жизни?<a class="header__link"href=#>Узнать &rarr;</a></p>
+      <p class="header__subtitle">Какие современные и эффективные подходы к обучению вы можете использовать в своей жизни?<a class="header__link" href=#>Узнать &rarr;</a></p>
       <div class="header__square-pic"></div>
       <img src="./images/header-image.png" alt="" class="header__main-illustration">
     </header>
@@ -242,9 +242,9 @@
             Соцсети
           </h4>
           <div class="footer__column-links">
-            <a class="footer__link" href=#><img class="footer__social-icon" src="./images/facebook_color_white.svg">Facebook</a>
-            <a class="footer__link" href=#><img class="footer__social-icon" src="./images/vk_color_white.svg">ВКонтакте</a>
-            <a class="footer__link" href=#><img class="footer__social-icon" src="./images/instagram_color_white.svg">Instagram</a>
+            <a class="footer__link" href=#><img class="footer__social-icon" src="./images/facebook_color_white.svg" alt="">Facebook</a>
+            <a class="footer__link" href=#><img class="footer__social-icon" src="./images/vk_color_white.svg" alt="">ВКонтакте</a>
+            <a class="footer__link" href=#><img class="footer__social-icon" src="./images/instagram_color_white.svg" alt="">Instagram</a>
           </div>
         </div>
       </section>
