--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" type="text/css" href="./styles/style.css">
   <title>Научиться учиться</title>
 </head>
-<body>
+<body class="body">
   <div class="page">
     <header class="header">
       <div class="logo logo_place_header"></div>
@@ -16,99 +16,102 @@
       </h1>
       <p class="header__subtitle">Какие современные и эффективные подходы к обучению вы можете использовать в своей жизни?<a class="header__link" href=#>Узнать &rarr;</a></p>
       <div class="header__square-pic"></div>
-      <img src="./images/header-image.png" alt="" class="header__main-illustration">
+      <img src="./images/header-image.png" alt="Картина Федора Решетникова 'Опять двойка' " class="header__main-illustration">
     </header>
     <main class="content">
       <section class="description">
-        <div class="two-columns">
-          <h4 class="two-columns__brief">
+        <article class="two-columns">
+          <h2 class="two-columns__brief">
             Главные проблемы в обучении
-          </h4>
+          </h2>
           <div class="two-columns__main-text">
             <p class="two-columns__paragraph">
               Ни в школе, ни в институте нас не учат тому, как правильно изучать материал. Мы готовимся к экзаменам и учим билеты. Мы тренируемся решать однообразные задачи, чтобы лучше сдать тест, но часто в итоге это не дает нам реального знания. Зубрежка быстро выветривается и не приносит пользы.
             </p>
-            <p class="two-columns__paragraph two-columns__paragraph_margin"><span class="span-accent">Вывод:</span> учиться тоже нужно уметь, но почему-то этому мало где учат. Что с этим делать?</p>
+            <p class="two-columns__paragraph ">
+              <span class="two-columns__span-accent">Вывод:</span> 
+              учиться тоже нужно уметь, но почему-то этому мало где учат. Что с этим делать?
+            </p>
             <p class="two-columns__paragraph">
               Конкретные техники и упражнения помогают изменить подход к обучению, сделать его эффективным и захватывающим. Эти же техники применяются на примере обучения в Практикуме.
             </p>
           </div>
-        </div>
+        </article>
       </section>
       <section class="digits">
-        <h1 class="section-title">
+        <h2 class="section-title">
           Цифры и факты
-        </h1>
-        <h2 class="section-subtitle">
-          Про учёбу и мозг
         </h2>
+        <p class="section-subtitle">
+          Про учёбу и мозг
+        </p>
         <div class="table">
           <div class="table__cell">
-            <h3 class="table__heading">
+            <h4 class="table__heading">
               86 миллиардов
-            </h3>
+            </h4>
             <p class="table__text">
               Число нейронов в мозге человека
             </p>
           </div>
           <div class="table__cell">
-            <h3 class="table__heading">
+            <h4 class="table__heading">
               2.1 миллиарда
-            </h3>
+            </h4>
             <p class="table__text">
               Число нуждающихся в повышении квалификации
             </p>
-            <p class="table__text_dop">
+            <p class="table__text">
               Всемирный Банк, 2017
             </p>
           </div>
           <div class="table__cell">
-            <h3 class="table__heading">
+            <h4 class="table__heading">
               1000 терабайт
-            </h3>
+            </h4>
             <p class="table__text">
               Объём памяти человека
             </p>
           </div>
           <div class="table__cell">
-            <h3 class="table__heading">
+            <h4 class="table__heading">
               500 триллионов
-            </h3>
+            </h4>
             <p class="table__text">
               Число ответственных за обучение нервных синапсов у взрослого человека
             </p>
           </div>
           <div class="table__cell">
-            <h3 class="table__heading">
+            <h4 class="table__heading">
               420 миллионов
-            </h3>
+            </h4>
             <p class="table__text">
               Число взрослых людей моложе 25 лет, не имеющих образования для трудоустройства
             </p>
-            <p class="table__text_dop">
+            <p class="table__text">
               Всемирный Банк, 2017
             </p>
           </div>
           <div class="table__cell">
-            <h3 class="table__heading">
+            <h4 class="table__heading">
               17–20 лет
-            </h3>
+            </h4>
             <p class="table__text">
               Пик обучаемости
             </p>
           </div>
           <div class="table__cell">
-            <h3 class="table__heading">
+            <h4 class="table__heading">
               1885 год
-            </h3>
+            </h4>
             <p class="table__text">
               Открытие кривой забывания
             </p>
           </div>
           <div class="table__cell">
-            <h3 class="table__heading">
+            <h4 class="table__heading">
               1889 год
-            </h3>
+            </h4h4hh4hhh>
             <p class="table__text">
               Открытие условного рефлекса
             </p>
@@ -116,101 +119,101 @@
         </div>
       </section>
       <section class="feynman">
-        <h1 class="feynman__title">
+        <h2 class="feynman__title">
           Метод Фейнмана
-        </h1>
-        <h2 class="feynman__subtitle">
-          Выучить и не забыть.
         </h2>
+        <h3 class="feynman__subtitle">
+          Выучить и не забыть.
+        </h3>
         <a class="feynman__link" href=#>
           Подробнее &rarr;
         </a>
       </section>
       <section class="kaufman">
         <div class="kaufman__triangle"></div>
-        <h1 class="section-title section-title_theme_dark">
+        <h2 class="section-title section-title_theme_dark">
           Принципы обучения
-        </h1>
+        </h2>
         <h2 class="section-subtitle section-subtitle_theme_dark">
           от Джоша Кауфмана
         </h2>
         <div class="table table_theme_dark">
           <div class="table__cell table__cell_theme_dark">
-            <h3 class="table__heading table__heading_theme_dark">
+            <h4 class="table__heading table__heading_theme_dark">
               1
-            </h3>
+            </h4>
             <p class="table__text table__text_theme_dark">
               Выберите привлекательный проект.
             </p>
           </div>
           <div class="table__cell table__cell_theme_dark">
-            <h3 class="table__heading table__heading_theme_dark">
+            <h4 class="table__heading table__heading_theme_dark">
               2
-            </h3>
+            </h4>
             <p class="table__text table__text_theme_dark">
               Сосредоточьтесь на каком-то одном навыке.
             </p>
           </div>
           <div class="table__cell table__cell_theme_dark">
-            <h3 class="table__heading table__heading_theme_dark">
+            <h4 class="table__heading table__heading_theme_dark">
               3
-            </h3>
+            </h4>
             <p class="table__text table__text_theme_dark">
               Определите целевой уровень мастерства.
             </p>
           </div>
           <div class="table__cell table__cell_theme_dark">
-            <h3 class="table__heading table__heading_theme_dark">
+            <h4 class="table__heading table__heading_theme_dark">
               4
-            </h3>
+            </h4>
             <p class="table__text table__text_theme_dark">
               Разбейте навык на элементы.
             </p>
           </div>
           <div class="table__cell table__cell_theme_dark">
-            <h3 class="table__heading table__heading_theme_dark">
+            <h4 class="table__heading table__heading_theme_dark">
               5
-            </h3>
+            </h4>
             <p class="table__text table__text_theme_dark">
               Приготовьте всё необходимое для занятий.
             </p>
           </div>
           <div class="table__cell table__cell_theme_dark">
-            <h3 class="table__heading table__heading_theme_dark">
+            <h4 class="table__heading table__heading_theme_dark">
               6
-            </h3>
+            </h4>
             <p class="table__text table__text_theme_dark">
               Устраните препятствия для занятий.
             </p>
           </div>
           <div class="table__cell table__cell_theme_dark">
-            <h3 class="table__heading table__heading_theme_dark">
+            <h4 class="table__heading table__heading_theme_dark">
               7
-            </h3>
+            </h4>
             <p class="table__text table__text_theme_dark">
               Выделите специальное время для занятий.
             </p>
           </div>
           <div class="table__cell table__cell_theme_dark">
-            <h3 class="table__heading table__heading_theme_dark">
+            <h4 class="table__heading table__heading_theme_dark">
               8
-            </h3>
+            </h4>
             <p class="table__text table__text_theme_dark">
               Создайте быстрые петли обратной связи.
             </p>
           </div>
           <div class="table__cell table__cell_theme_dark">
-            <h3 class="table__heading table__heading_theme_dark">
+            <h4 class="table__heading table__heading_theme_dark">
               9
-            </h3>
+            </h4>
             <p class="table__text table__text_theme_dark">
               Занимайтесь по расписанию, короткими интенсивными интервалами.
             </p>
           </div>
           <div class="table__cell table__cell_theme_dark">
-            <h3 class="table__heading table__heading_theme_dark">
+            <h4 class="table__heading table__heading_theme_dark">
               10
-            </h3>
+            </h4>
             <p class="table__text table__text_theme_dark">
               Уделяйте внимание количеству и скорости.
             </p>
@@ -220,15 +223,15 @@
     </main>
     <footer class="footer">
       <section class="footer__columns">
-        <div class="footer__column_content_copyright">
-          <div class="logo logo__place_footer">
+        <div class="footer__column footer__column_content_copyright">
+          <div class="logo logo_place_footer">
           </div>
           <p class="footer__author">
             &copy; 2021. Яна Кухаренко
           </p>
         </div>
-        <div class="footer__column_content_info">
-          <h4 class="footer__column-heading">
+        <div class="footer__column footer__column_content_info">
+          <h4 class="footer__column footer__column-heading">
             О Практикуме
           </h4>
           <div class="footer__column-links">
@@ -237,14 +240,14 @@
             <a class="footer__link" href=#>Наставники</a>
           </div>
         </div>
-        <div class="footer__column-social-icon">
+        <div class="footer__column-social">
           <h4 class="footer__column-heading">
             Соцсети
           </h4>
           <div class="footer__column-links">
-            <a class="footer__link" href=#><img class="footer__social-icon" src="./images/facebook_color_white.svg" alt="">Facebook</a>
-            <a class="footer__link" href=#><img class="footer__social-icon" src="./images/vk_color_white.svg" alt="">ВКонтакте</a>
-            <a class="footer__link" href=#><img class="footer__social-icon" src="./images/instagram_color_white.svg" alt="">Instagram</a>
+            <a class="footer__link" href=#><img class="footer__social-icon" src="./images/facebook_color_white.svg" alt="Иконка Facebook">Facebook</a>
+            <a class="footer__link" href=#><img class="footer__social-icon" src="./images/vk_color_white.svg" alt="Иконка Вконтакте">ВКонтакте</a>
+            <a class="footer__link" href=#><img class="footer__social-icon" src="./images/instagram_color_white.svg" alt="Иконка Instagram">Instagram</a>
           </div>
         </div>
       </section>
