--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="./styles/normalize.css">
+  <link rel="stylesheet" href="./vendor/normalize.css">
   <link rel="stylesheet" type="text/css" href="./styles/style.css">
   <title>Научиться учиться</title>
 </head>
@@ -16,7 +16,7 @@
       </h1>
       <p class="header__subtitle">Какие современные и эффективные подходы к обучению вы можете использовать в своей жизни?<a class="header__link" href=#>Узнать &rarr;</a></p>
       <div class="header__square-pic"></div>
-      <img src="./images/header-image.png" alt="Картина Федора Решетникова 'Опять двойка' " class="header__main-illustration">
+      <img src="./images/header-image.png" alt="Картина Федора Решетникова 'Опять двойка'" class="header__main-illustration">
     </header>
     <main class="content">
       <section class="description">
@@ -47,17 +47,17 @@
         </p>
         <div class="table">
           <div class="table__cell">
-            <h4 class="table__heading">
+            <h3 class="table__heading">
               86 миллиардов
-            </h4>
+            </h3>
             <p class="table__text">
               Число нейронов в мозге человека
             </p>
           </div>
           <div class="table__cell">
-            <h4 class="table__heading">
+            <h3 class="table__heading">
               2.1 миллиарда
-            </h4>
+            </h3>
             <p class="table__text">
               Число нуждающихся в повышении квалификации
             </p>
@@ -66,25 +66,25 @@
             </p>
           </div>
           <div class="table__cell">
-            <h4 class="table__heading">
+            <h3 class="table__heading">
               1000 терабайт
-            </h4>
+            </h3>
             <p class="table__text">
               Объём памяти человека
             </p>
           </div>
           <div class="table__cell">
-            <h4 class="table__heading">
+            <h3 class="table__heading">
               500 триллионов
-            </h4>
+            </h3>
             <p class="table__text">
               Число ответственных за обучение нервных синапсов у взрослого человека
             </p>
           </div>
           <div class="table__cell">
-            <h4 class="table__heading">
+            <h3 class="table__heading">
               420 миллионов
-            </h4>
+            </h3>
             <p class="table__text">
               Число взрослых людей моложе 25 лет, не имеющих образования для трудоустройства
             </p>
@@ -93,25 +93,25 @@
             </p>
           </div>
           <div class="table__cell">
-            <h4 class="table__heading">
+            <h3 class="table__heading">
               17–20 лет
-            </h4>
+            </h3>
             <p class="table__text">
               Пик обучаемости
             </p>
           </div>
           <div class="table__cell">
-            <h4 class="table__heading">
+            <h3 class="table__heading">
               1885 год
-            </h4>
+            </h3>
             <p class="table__text">
               Открытие кривой забывания
             </p>
           </div>
           <div class="table__cell">
-            <h4 class="table__heading">
+            <h3 class="table__heading">
               1889 год
-            </h4>
+            </h3>
             <p class="table__text">
               Открытие условного рефлекса
             </p>
@@ -122,9 +122,9 @@
         <h2 class="feynman__title">
           Метод Фейнмана
         </h2>
-        <h3 class="feynman__subtitle">
+        <p class="feynman__subtitle">
           Выучить и не забыть.
-        </h3>
+        </p>
         <a class="feynman__link" href=#>
           Подробнее &rarr;
         </a>
@@ -134,9 +134,9 @@
         <h2 class="section-title section-title_theme_dark">
           Принципы обучения
         </h2>
-        <h2 class="section-subtitle section-subtitle_theme_dark">
+        <p class="section-subtitle section-subtitle_theme_dark">
           от Джоша Кауфмана
-        </h2>
+        </p>
         <div class="table table_theme_dark">
           <div class="table__cell table__cell_theme_dark">
             <h4 class="table__heading table__heading_theme_dark">
@@ -222,7 +222,7 @@
       </section>
     </main>
     <footer class="footer">
-      <section class="footer__columns">
+      <div class="footer__columns">
         <div class="footer__column footer__column_content_copyright">
           <div class="logo logo_place_footer">
           </div>
@@ -230,8 +230,8 @@
             &copy; 2021. Яна Кухаренко
           </p>
         </div>
-        <div class="footer__column footer__column_content_info">
-          <h4 class="footer__column footer__column-heading">
+        <nav class="footer__column footer__column_content_info">
+          <h4 class="footer__column-heading">
             О Практикуме
           </h4>
           <div class="footer__column-links">
@@ -239,8 +239,8 @@
             <a class="footer__link" href=#>Концепция</a>
             <a class="footer__link" href=#>Наставники</a>
           </div>
-        </div>
-        <div class="footer__column-social">
+        </nav>
+        <nav class="footer__column footer__column_content_social">
           <h4 class="footer__column-heading">
             Соцсети
           </h4>
@@ -249,8 +249,8 @@
             <a class="footer__link" href=#><img class="footer__social-icon" src="./images/vk_color_white.svg" alt="Иконка Вконтакте">ВКонтакте</a>
             <a class="footer__link" href=#><img class="footer__social-icon" src="./images/instagram_color_white.svg" alt="Иконка Instagram">Instagram</a>
           </div>
-        </div>
-      </section>
+        </nav>
+      </div>
     </footer>
   </div>
 </body>
