--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="./vendor/normalize.css">
-  <link rel="stylesheet" type="text/css" href="./styles/style.css">
+  <link rel="stylesheet" type="text/css" href="./pages/index.css">
   <title>Научиться учиться</title>
 </head>
 <body class="body">
@@ -14,8 +14,8 @@
       <h1 class="header__title">
           Научиться учиться
       </h1>
-      <p class="header__subtitle">Какие современные и эффективные подходы к обучению вы можете использовать в своей жизни?<a class="header__link" href=#>Узнать &rarr;</a></p>
-      <div class="header__square-pic"></div>
+      <p class="header__subtitle">Какие современные и эффективные подходы к обучению вы можете использовать в своей жизни?<a class="header__link opacity" href=#>Узнать &rarr;</a></p>
+      <div class="header__square-pic rotate"></div>
       <img src="./images/header-image.png" alt="Картина Федора Решетникова 'Опять двойка'" class="header__main-illustration">
     </header>
     <main class="content">
@@ -37,6 +37,75 @@
             </p>
           </div>
         </article>
+      </section>
+      <section class="techniques">
+        <h2 class="section-title">
+          Техники обучения
+        </h2>
+        <p class="section-subtitle">
+          Пять практик от Барбары Оакли
+        </p>
+        <div class="cards">
+          <div class="cards__item">
+            <img class="cards__image" src="images_sprint-2/cards-attention.png" alt="Книга Brianna Wiest '101 ESSAYS THAT WILL CHANGE THE WAY YOU THINK'">
+            <h3 class="cards__title">Два вида внимания</h3>
+            <p class="cards__description">Глубокие знания возникают, если чередовать сфокусированное и рассеянное мышление.
+            </p>
+          </div>
+          <div class="cards__item">
+            <img class="cards__image" src="images_sprint-2/cards-recall.png" alt="Статуя мальчика">
+            <h3 class="cards__title">Recall</h3>
+            <p class="cards__description">Вспоминайте изученное — это позволит соединить разрозненные порции памяти.</p>
+          </div>
+          <div class="cards__item">
+            <img class="cards__image" src="images_sprint-2/cards-interliving.png" alt ="Черно-белая картинка здания изнутри">
+            <h3 class="cards__title">Интерливинг</h3>
+            <p class="cards__description">Изучайте несколько навыков одновременно, они обогащают друг друга.
+            </p>
+          </div>
+          <div class="cards__item">
+            <img class="cards__image" src="images_sprint-2/cards-question.png" alt="Человек в огромной пустой комнате с окнами на стенах">
+            <h3 class="cards__title">Вопросы</h3>
+            <p class="cards__description">Слушая преподавателя, придумывайте хороший вопрос, который вас действительно волнует.</p>
+          </div>
+          <div class="cards__item">
+            <img class="cards__image" src="images_sprint-2/cards-competence.png" alt="Книги лежащие на руке">
+            <h3 class="cards__title">Иллюзия компетентности</h3>
+            <p class="cards__description">Повторите про себя, запишите, расскажите другу: вам только кажется, что вы владеете новой темой.</p>
+          </div>
+        </div>
+      </section>
+      <section class="video">
+        <h2 class="section-title">Видео нa TED</h2>
+        <p class="section-subtitle">Для тех, кто любит прокрастинировать</p>
+        <div class="video__iframes">
+          <iframe class="video__iframe" width="515" height="316" src="https://www.youtube.com/embed/arj7oStGLkU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+          <iframe class="video__iframe" width="515" height="316" src="https://www.youtube.com/embed/5MgBikgcWnY?start=1" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        </div>
+      </section>
+      <section class="oakley">
+        <article class="two-columns">
+          <h2 class="two-columns__brief">
+            История Барбары Оакли.
+          </h2>
+          <div class="two-columns__main-text">
+            <p class="two-columns__paragraph">
+              С детства Барбаре не давалась математика. Она считала себя законченным гуманитарием, причём далеко не самым умным. В армии она изучала русский язык, чтобы получить надбавку, да так успешно, что её выдвинули в командиры. Но для продвижения по службе нужно было сдавать математику. И тогда Барбара придумала свой подход к точным наукам. Оказалось, если вам что-то «плохо даётся», ваши добытые трудом знания гораздо глубже, чем у тех, кому всё ясно с первого взгляда.
+            </p>
+          </div>
+        </article>
+      </section>
+      </section>
+      <section class="feynman">
+        <h2 class="feynman__title">
+          Метод Фейнмана
+        </h2>
+        <p class="feynman__subtitle">
+          Выучить и не забыть.
+        </p>
+        <a class="feynman__link opacity" href=#>
+          Подробнее &rarr;
+        </a>
       </section>
       <section class="digits">
         <h2 class="section-title">
@@ -118,19 +187,21 @@
           </div>
         </div>
       </section>
-      <section class="feynman">
-        <h2 class="feynman__title">
-          Метод Фейнмана
-        </h2>
-        <p class="feynman__subtitle">
-          Выучить и не забыть.
-        </p>
-        <a class="feynman__link" href=#>
-          Подробнее &rarr;
-        </a>
+      <section class="khan">
+        <div class="khan__container">
+          <p class="khan__author">Салман Хан</p>
+          <h2 class="khan__title">Весь мир — школа</h2>
+          <p class="khan__quote">Страсть и новаторство Сала Хана меняют процесс обучения миллионов студентов по всему миру. Книгу «Весь мир — школа» нужно прочитать всем, кто занимается образованием — так учащиеся повсюду смогут получить навыки и знания, которые приносят успех в школе, карьере и жизни.</p>
+          <h3 class="khan__quote-author">Джордж Лукас</h3>
+          <p class="khan__quote-author-subline">Кинорежиссер, продюсер</p>
+          <div class="khan__book-container">
+            <img class="khan__book-pic" src="images_sprint-2/khan-book.jpg" alt="Книга Салман Хан 'Весь мир - школа'">
+            <a class="khan__buy-link opacity" href=#>Купить книгу &rarr;</a>
+          </div>
+        </div>
       </section>
       <section class="kaufman">
-        <div class="kaufman__triangle"></div>
+        <div class="kaufman__triangle rotate"></div>
         <h2 class="section-title section-title_theme_dark">
           Принципы обучения
         </h2>
@@ -220,6 +291,16 @@
           </div>
         </div> 
       </section>
+      <section class="resources">
+        <h2 class="section-title">Полезные ресурсы</h2>
+        <p class="section-subtitle">Больше материалов о техниках и лайфхаках обучения</p>
+        <div class="resources__logo-zone">
+          <a href=#><img class="resources__logo opacity" src="images_sprint-2/logo/resources-arzamas.svg" alt="Иконка 'Arzamas'"></a>
+          <a href=#><img class="resources__logo opacity" src="images_sprint-2/logo/resources-n1.svg" alt="Иконка 'N+1'"></a>
+          <a href=#><img class="resources__logo opacity" src="images_sprint-2/logo/resources-strelka.svg" alt="Иконка 'STRELKA'"></a>
+          <a href=#><img class="resources__logo opacity" src="images_sprint-2/logo/resources-polka.svg" alt="Иконка 'ПОЛКА'"></a>
+        </div> 
+      </section>
     </main>
     <footer class="footer">
       <div class="footer__columns">
@@ -235,9 +316,9 @@
             О Практикуме
           </h4>
           <div class="footer__column-links">
-            <a class="footer__link" href=#>Главная</a>
-            <a class="footer__link" href=#>Концепция</a>
-            <a class="footer__link" href=#>Наставники</a>
+            <a class="footer__link opacity" href=#>Главная</a>
+            <a class="footer__link opacity" href=#>Концепция</a>
+            <a class="footer__link opacity" href=#>Наставники</a>
           </div>
         </nav>
         <nav class="footer__column footer__column_content_social">
@@ -245,9 +326,9 @@
             Соцсети
           </h4>
           <div class="footer__column-links">
-            <a class="footer__link" href=#><img class="footer__social-icon" src="./images/facebook_color_white.svg" alt="Иконка Facebook">Facebook</a>
-            <a class="footer__link" href=#><img class="footer__social-icon" src="./images/vk_color_white.svg" alt="Иконка Вконтакте">ВКонтакте</a>
-            <a class="footer__link" href=#><img class="footer__social-icon" src="./images/instagram_color_white.svg" alt="Иконка Instagram">Instagram</a>
+            <a class="footer__link opacity" href=#><img class="footer__social-icon" src="./images/facebook_color_white.svg" alt="Иконка Facebook">Facebook</a>
+            <a class="footer__link opacity" href=#><img class="footer__social-icon" src="./images/vk_color_white.svg" alt="Иконка Вконтакте">ВКонтакте</a>
+            <a class="footer__link opacity" href=#><img class="footer__social-icon" src="./images/instagram_color_white.svg" alt="Иконка Instagram">Instagram</a>
           </div>
         </nav>
       </div>
